// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User profile message button test Test not present 1`] = `
<DocumentFragment>
  <button
    aria-haspopup="dialog"
    class="flyout-trigger message message-button-flyout flyout-closed nti-button button primary medium pv-md ph-lg"
    tabindex="0"
  >
    <span>
      <div
        class="icon"
      />
      <span
        class="text"
      >
        Message
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`User profile message button test Test present 1`] = `
<DocumentFragment>
  <div
    class="nti-link-to-path"
    to="#"
  >
    <button
      class="message available nti-button button primary medium pv-md ph-lg"
      tabindex="0"
    >
      <div
        class="icon"
      />
      <span
        class="text"
      >
        Message
      </span>
    </button>
  </div>
</DocumentFragment>
`;
